Fix: Optimize table style #3221 (#9703)
### What problem does this PR solve?

Fix: Optimize table style
-Modify the style of the table scrollbar and remove unnecessary
scrollbars
-Adjust the header style of the table, add background color and
hierarchy
-Optimize the style of datasets and file tables
-Add a new background color variable

### Type of change

- [x] Bug Fix (non-breaking change which fixes an issue)

--- a/web/tailwind.css
+++ b/web/tailwind.css
@@ -91,6 +91,8 @@
     --input-border: rgba(22, 22, 24, 0.2);
 
     --metallic: #46464a;
+
+    --bg-title: #f6f6f7;
     /* design colors */
 
     --bg-base: #ffffff;
@@ -235,6 +237,8 @@
     --input-border: rgba(255, 255, 255, 0.2);
 
     --metallic: #fafafa;
+
+    --bg-title: #38383a;
     /* design colors */
 
     --bg-base: #161618;
